--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ common/data/compiled/drracket/errortrace
 ch04/01/evaluator/compiled/drracket/errortrace
 ch04/01/evaluator/derived-forms/compiled/drracket/errortrace
 ch04/01/evaluator/special-forms/compiled/drracket/errortrace
+ch04/01/evaluator-analyzer/compiled/drracket/errortrace
+./*/**/compiled/*
