--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,5 @@ ch04/01/evaluator/compiled/drracket/errortrace
 ch04/01/evaluator/derived-forms/compiled/drracket/errortrace
 ch04/01/evaluator/special-forms/compiled/drracket/errortrace
 ch04/01/evaluator-analyzer/compiled/drracket/errortrace
-./*/**/compiled/*
+**/compiled/
+
